@@ -1,5 +1,6 @@
 plugins {
     kotlin("jvm") version "2.3.10"
+    id("org.jetbrains.dokka") version "2.0.0"
     `java-library`
     `maven-publish`
 }
@@ -10,11 +11,15 @@ version = System.getenv("VERSION") ?: "1.0-SNAPSHOT"
 repositories {
     mavenCentral()
     maven("https://jitpack.io")
+    maven("https://repo.runelite.net")
 }
 
 dependencies {
     api("com.github.TribotRS:automation-sdk:latest.release")
+    compileOnly("net.runelite:client:latest.release")
     testImplementation(kotlin("test"))
+    testImplementation("io.mockk:mockk:1.13.16")
+    testImplementation("net.runelite:client:latest.release")
 }
 
 kotlin {
@@ -23,6 +28,7 @@ kotlin {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 java {
